--- a/css/style-profile.css
+++ b/css/style-profile.css
@@ -21,23 +21,34 @@
 .kurierchikof-rs-top-menu button:active,
 .kurierchikof-rs-profile-form button:active, 
 .kurierchikof-rs-top-menu button:focus,
-.kurierchikof-rs-profile-form button:active{
+.kurierchikof-rs-profile-form button:focus,
+
+.kurierchikof-rs-modal-edit-form button:active,
+.kurierchikof-rs-modal-edit-form button:focus,
+
+.kurierchikof-rs-modal-del-form button:active,
+.kurierchikof-rs-modal-del-form button:focus{
   outline: none !important;
   box-shadow: none !important;
 }
 
 .kurierchikof-rs-top-menu button::-moz-focus-inner,
-.kurierchikof-rs-profile-form button::-moz-focus-inner {
+.kurierchikof-rs-profile-form button::-moz-focus-inner,
+.kurierchikof-rs-modal-edit-form::-moz-focus-inner,
+.kurierchikof-rs-modal-del-form::-moz-focus-inner {
   border: 0 !important;
   box-shadow: none !important;
 }
 
 .kurierchikof-rs-profile-form input::-webkit-outer-spin-button,
-.kurierchikof-rs-profile-form input::-webkit-inner-spin-button {
+.kurierchikof-rs-profile-form input::-webkit-inner-spin-button,
+.kurierchikof-rs-modal-edit-form::-webkit-inner-spin-button,
+.kurierchikof-rs-modal-del-form::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
-.kurierchikof-rs-profile-form input:hover {
+.kurierchikof-rs-profile-form input:hover,
+.kurierchikof-rs-modal-edit-form input:hover {
   cursor: pointer;
 }
 
@@ -52,6 +63,7 @@
 .kurierchikof-rs-top-menu button,
 .kurierchikof-rs-top-menu div,
 .kurierchikof-rs-top-menu span,
+
 .kurierchikof-rs-profile-form p,
 .kurierchikof-rs-profile-form h1,
 .kurierchikof-rs-profile-form h2,
@@ -62,7 +74,32 @@
 .kurierchikof-rs-profile-form a,
 .kurierchikof-rs-profile-form button,
 .kurierchikof-rs-profile-form div,
-.kurierchikof-rs-profile-form span{
+.kurierchikof-rs-profile-form span,
+
+.kurierchikof-rs-modal-edit-form p,
+.kurierchikof-rs-modal-edit-form h1,
+.kurierchikof-rs-modal-edit-form h2,
+.kurierchikof-rs-modal-edit-form h3,
+.kurierchikof-rs-modal-edit-form h4,
+.kurierchikof-rs-modal-edit-form h5,
+.kurierchikof-rs-modal-edit-form h6,
+.kurierchikof-rs-modal-edit-form a,
+.kurierchikof-rs-modal-edit-form button,
+.kurierchikof-rs-modal-edit-form div,
+.kurierchikof-rs-modal-edit-form span,
+
+.kurierchikof-rs-modal-del-form p,
+.kurierchikof-rs-modal-del-form h1,
+.kurierchikof-rs-modal-del-form h2,
+.kurierchikof-rs-modal-del-form h3,
+.kurierchikof-rs-modal-del-form h4,
+.kurierchikof-rs-modal-del-form h5,
+.kurierchikof-rs-modal-del-form h6,
+.kurierchikof-rs-modal-del-form a,
+.kurierchikof-rs-modal-del-form button,
+.kurierchikof-rs-modal-del-form div,
+.kurierchikof-rs-modal-del-form span{
+
   font-family: 'Open Sans Regular', sans-serif;
 }
 
@@ -295,7 +332,7 @@
   margin-top: 30px;
   margin-left: 30px;
   margin-bottom: 34px;
-  letter-spacing: .05em;
+  letter-spacing: .33px;
 }
 
 .kurierchikof-rs-profile-form .custom-btn-edit-profil {
@@ -308,7 +345,7 @@
   text-align: center;
   padding: 9px 20px 8px 20px;
   margin-top: 17px;
-  letter-spacing: .03em;
+  letter-spacing: .33px;
 }
 
 .kurierchikof-rs-profile-form .custom-btn-edit-profil:hover {
@@ -626,7 +663,7 @@
   background-color: #f4f8f7;
   color: #929594;
   margin-left: 14px;
-  letter-spacing: .05em;
+  letter-spacing: .33px;
   padding: 10px 13px 9px 13px;
 }
 
@@ -639,18 +676,18 @@
   background-color: #f4f8f7;
   color: #929594;
   padding: 10px 40px 9px 40px;
-  letter-spacing: .05em;
+  letter-spacing: .33px;
 }
 
 .kurierchikof-rs-modal-del-form .custom-btn-cal {
   margin-left: 15px;
   padding: 10px 23px 9px 23px;
-  letter-spacing: .05em;
+  letter-spacing: .33px;
 }
 
 .kurierchikof-rs-modal-edit-form .custom-btn-save{
   padding: 10px 13px 9px 13px;
-  letter-spacing: .05em;
+  letter-spacing: .33px;
   font-size: 14px;
 }
 
