--- a/css/style-profile.css
+++ b/css/style-profile.css
@@ -835,7 +835,6 @@
 }
 
 
-
 .kurierchikof-rs-modal-edit-form .w-100p,
 .kurierchikof-rs-top-menu .w-100p {
   width: 100%;
@@ -999,13 +998,25 @@
     margin-right: 0;
   }
 
+  .kurierchikof-rs-top-menu .container{
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .kurierchikof-rs-top-menu .pull-left{
+    margin-left: 15px;
+  }
+
+  .kurierchikof-rs-top-menu .pull-right{
+    margin-right: 15px;
+  }
+
   .kurierchikof-rs-top-menu .container > .navbar-collapse::before{
     content: '';
     position: absolute;
     top: 100%;
     left: 0;
-    width: calc(100% - 30px);
-    margin-left: 15px;
+    width: 100%;
     height: 7px;
     box-shadow: 0px 7.6px 7.6px -3.9px rgba(0, 0, 0, 0.09) inset;
   }
